applies universal page-wrapper element

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,31 +1,38 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,700,600);
 
 body { font-family: 'Open Sans', sans-serif; }
+.page-wrapper {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 640px;
+	padding: 20px;
+	margin: auto;
+}
 
 /* "Fading" header */
-#header-wrapper {
+#header {
 	position: fixed;
 	top: 0;
-	z-index: 1;
+	z-index: 0;
 	height: 220px;
 }
-#main-wrapper {
+#main {
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 	margin-top: 219px; /* must be less than height of #header because of Safari-bug */
 }
 /* end fading header */
 
-#header-wrapper {
+#header {
 	width: 100%;
 	background: #222;
+}
+#header .root-link {
+	display: block;
 	text-align: center;
+	text-decoration: none;
 }
-#header-wrapper #header {
-	display: inline-block;
-	margin: 20px 0;
-}
-#header .root-link { text-decoration: none; }
 #header .avatar {
 	display: inline-block;
 	width: 100px;
@@ -70,14 +77,9 @@ body { font-family: 'Open Sans', sans-serif; }
 }
 
 
-#main-wrapper { background: #fff; }
 #main {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	width: 640px;
-	padding: 30px 20px;
-	margin: auto;
+	background: #fff;
+	padding: 10px 0;
 }
 #main .sample {
 	-webkit-box-sizing: border-box;
