--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -7,7 +7,7 @@ body { font-family: 'Open Sans', sans-serif; }
 	box-sizing: border-box;
 	width: 640px;
 	padding: 20px;
-	margin: auto;
+	margin: 0 auto;
 }
 
 /* "Fading" header */
