--- a/assets/stylesheets/boilerplate.css
+++ b/assets/stylesheets/boilerplate.css
@@ -190,18 +190,18 @@ textarea {
  * 1. The space content is one way to avoid an Opera bug when the
  *    `contenteditable` attribute is included anywhere else in the document.
  *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
+ *    that receive the `clr` class.
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
 
-.clearfix:before,
-.clearfix:after {
+.clr:before,
+.clr:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }
 
-.clearfix:after {
+.clr:after {
     clear: both;
 }
 
@@ -210,7 +210,7 @@ textarea {
  * Include this rule to trigger hasLayout and contain floats.
  */
 
-.clearfix {
+.clr {
     *zoom: 1;
 }
 
