--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -95,6 +95,17 @@ hr {
 #main .sample + .sample { margin-top: 30px; }
 
 
+.contact-links {
+	background: #55acee;
+	text-align: center;
+}
+.contact-links .page-wrapper {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+.contact-links .icon + .icon { margin-left: 15px; }
+
+
 /* Retina graphics */
 @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5){
 	#header .avatar { background-image: url(http://en.gravatar.com/avatar/82d3e0d3bd060fae9d346dcf745edff0.jpg?size=200); }
