--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -98,6 +98,17 @@ hr {
 .contact-links .icon + .icon { margin-left: 5%; }
 
 
+.bio {
+	padding-top: 30px;
+	color: #666;
+	font-family: 'Roboto Slab', serif;
+	font-size: 15px;
+	font-weight: 300;
+	text-align: justify;
+}
+.bio p { margin: 0 0 16px; }
+
+
 /* Retina graphics */
 @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5){
 	#header .avatar { background-image: url(http://en.gravatar.com/avatar/82d3e0d3bd060fae9d346dcf745edff0.jpg?size=200); }
