emphasises languages in text

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -107,6 +107,10 @@ hr {
 	text-align: justify;
 }
 .bio p { margin: 0 0 16px; }
+.bio em {
+	font-weight: 400;
+	font-style: normal;
+}
 
 
 /* Retina graphics */
