--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,700,600|Roboto+Slab:100,300,400,700);
 
-body { font-family: 'Open Sans', sans-serif; }
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+}
 .page-wrapper {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -103,7 +106,6 @@ hr {
 	color: #666;
 	font-family: 'Roboto Slab', serif;
 	font-size: 15px;
-	font-weight: 300;
 	text-align: justify;
 }
 .bio p { margin: 0 0 16px; }
