--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,700,600|Roboto+Slab:100,300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,600|Roboto+Slab:300,400);
 
 body {
 	font-family: 'Open Sans', sans-serif;
