--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -8,7 +8,8 @@ body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	padding: 20px 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 .page-wrapper {
 	-webkit-box-sizing: border-box;
@@ -16,7 +17,8 @@ body {
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 640px;
-	padding: 0 20px;
+	padding-right: 20px;
+	padding-left: 20px;
 	margin: 0 auto;
 }
 hr {
