don't override padding

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -114,7 +114,7 @@ hr {
 
 
 #bio-section {
-	padding-top: 30px;
+	margin-top: 10px;
 	font-family: 'Roboto Slab', serif;
 	font-size: 15px;
 	text-align: justify;
