adds section-title style

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -99,6 +99,12 @@ hr {
 
 
 #main { background: #fff; }
+#main .page-section .section-title {
+	margin: 0 0 8px;
+	color: #66757f;
+	font-size: 28px;
+	font-weight: 600;
+}
 
 
 #contact-section {
