--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -86,6 +86,7 @@ hr {
 	font-weight: 600;
 	line-height: 40px;
 	text-align: center;
+	text-shadow: 0 1px 8px rgba(0,0,0, .5);
 	letter-spacing: -1px;
 }
 #header .subtitle {
@@ -95,6 +96,7 @@ hr {
 	font-weight: 300;
 	line-height: normal;
 	text-align: center;
+	text-shadow: 0 1px 5px #000;
 }
 
 
