changes cover image

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -45,7 +45,7 @@ hr {
 /* end fading header */
 
 #header {
-	background: #292f33 url(../images/cover.jpg) repeat top;
+	background: #292f33 url(../images/cover.jpg) repeat center;
 	background-size: cover;
 }
 #header .root-link {
