--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -1,7 +1,9 @@
 .icon {
+	$size: 24px;
+
 	display: inline-block;
-	width: 24px;
-	height: 24px;
+	width: $size;
+	height: $size;
 	background: no-repeat center;
 	background-size: contain;
 	vertical-align: middle;
@@ -10,10 +12,6 @@
 	line-height: normal;
 }
 
-.icon.email { background-image: url(../images/icons/email.svg); }
-.icon.twitter { background-image: url(../images/icons/twitter.svg); }
-.icon.github { background-image: url(../images/icons/github.svg); }
-.icon.stackoverflow { background-image: url(../images/icons/stackoverflow.svg); }
-.icon.careers { background-image: url(../images/icons/careers.svg); }
-.icon.coderwall { background-image: url(../images/icons/coderwall.svg); /* inofficial */ }
-.icon.linkedin { background-image: url(../images/icons/linkedin.svg); /* inofficial */ }
+@each $icon in email, twitter, github, stackoverflow, careers, coderwall, linkedin {
+	.icon.#{$icon} { background-image: url('/assets/images/icons/#{$icon}.svg'); }
+}
