use modifiers instead of stand-alone classes for icons

--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -13,5 +13,5 @@
 }
 
 @each $icon in email, twitter, github, stackoverflow, careers, coderwall, linkedin {
-	.icon.#{$icon} { background-image: url('/assets/images/icons/#{$icon}.svg'); }
+	.icon--#{$icon} { background-image: url('/assets/images/icons/#{$icon}.svg'); }
 }
