--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 	<![endif]-->
 
 	<header class="headerSection">
-		<div class="contentWrapper">
+		<div class="contentWrapper contentWrapper--moreSpacing">
 			<div class="headerSection-avatar"></div>
 			<h1 class="headerSection-title">Andreas Fransson</h1>
 			<h2 class="headerSection-subtitle">Developer &bull; Stockholm, SE</h2>
