--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -12,6 +12,6 @@
 	line-height: normal;
 }
 
-@each $icon in email, twitter, github, stackoverflow, careers, coderwall, linkedin {
+@each $icon in email, twitter, github, stackoverflow, careers, coderwall, linkedin, education {
 	.icon--#{$icon} { background-image: url('/assets/images/icons/#{$icon}.svg'); }
 }
