--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,7 +38,7 @@ body {
 }
 .headerSection-avatar {
 	$size: 100;
-	$imageUrl: 'http://en.gravatar.com/avatar/82d3e0d3bd060fae9d346dcf745edff0.jpg'; // gravatar: root@zykadelic.com
+	$imageUrl: '//en.gravatar.com/avatar/82d3e0d3bd060fae9d346dcf745edff0.jpg'; // gravatar: root@zykadelic.com
 
 	display: inline-block;
 	width: $size + px;
