updated site and work titles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@zykadelic</title>
+	<title>Andreas Fransson - Web Developer</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,7 +19,7 @@
 		<div class="contentWrapper contentWrapper--moreSpacing">
 			<div class="headerSection-avatar"></div>
 			<h1 class="headerSection-title">Andreas Fransson</h1>
-			<h2 class="headerSection-subtitle">Developer &bull; Stockholm, SE</h2>
+			<h2 class="headerSection-subtitle">Web Developer &bull; Stockholm, SE</h2>
 		</div>
 	</header>
 
