disable twitter and coderwall links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,8 @@
 		<nav class="socialBar">
 			<div class="contentWrapper contentWrapper--noSpacing">
 				<a href="mailto:{{ site.data.contact.email }}" target="_blank" title="Send me an email" class="icon icon--email">Email</a>
-				<a href="{{ site.data.contact.twitter }}" target="_blank" title="Tweet me" class="icon icon--twitter">Twitter</a>
-				<a href="{{ site.data.contact.github }}" target="_blank" title="Read my open source projects" class="icon icon--github">GitHub</a>
-				<a href="{{ site.data.contact.stackoverflow }}" target="_blank" title="StackOverflow goodies" class="icon icon--stackoverflow">StackOverflow</a>
-				<a href="{{ site.data.contact.coderwall }}" target="_blank" title="View my code achievements" class="icon icon--coderwall">Coderwall</a>
+				<a href="{{ site.data.contact.github }}" target="_blank" title="GitHub" class="icon icon--github">GitHub</a>
+				<a href="{{ site.data.contact.stackoverflow }}" target="_blank" title="StackOverflow" class="icon icon--stackoverflow">StackOverflow</a>
 			</div>
 		</nav>
 
