--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
 				<a href="mailto:{{ site.data.contact.email }}" target="_blank" title="Send me an email" class="icon icon--email">Email</a>
 				<a href="{{ site.data.contact.github }}" target="_blank" title="GitHub" class="icon icon--github">GitHub</a>
 				<a href="{{ site.data.contact.stackoverflow }}" target="_blank" title="StackOverflow" class="icon icon--stackoverflow">StackOverflow</a>
+				<a href="{{ site.data.contact.linkedin }}" target="_blank" title="LinkedIn" class="icon icon--linkedin">LinkedIn</a>
 			</div>
 		</nav>
 
